--- a/interfaces/default/html/services.html
+++ b/interfaces/default/html/services.html
@@ -9,16 +9,8 @@ webdir = htpc.WEBDIR
 <script src="../js/services.js"></script>
 <head>
 
-    <script type="text/javascript">
-        // Document ready
-
-
-        function load() {
-
-        }
-    </script>
 </head>
-<body onload="load();">
+<body>
 
 <div class="container">
     <div class="content">
@@ -39,7 +31,7 @@ webdir = htpc.WEBDIR
                 <table class="table table-striped table-hover">
                     <thead>
                     <tr>
-                        Commands
+                        <th>Commands</th>
                     </tr>
                     </thead>
                     <tbody>
