--- a/interfaces/default/html/services.html
+++ b/interfaces/default/html/services.html
@@ -36,7 +36,10 @@ webdir = htpc.WEBDIR
                     </thead>
                     <tbody>
                     <tr>
-                        <th><a href="/services/rebootserver">Reboot Server</a></th>
+                        <td><a href="/services/rebootserver">Reboot Server</a></td>
+                    </tr>
+                    <tr>
+                        <td><a href="/services/deletewatchedplex/1">Delete Episodes</a></td>
                     </tr>
                     </tbody>
                 </table>
@@ -54,7 +57,6 @@ webdir = htpc.WEBDIR
                             <div id="watchedshows"></div>
                         </td>
                     </tr>
-
                     </tbody>
                 </table>
             </div>
