Added iotop service data and interface

--- a/interfaces/default/html/services.html
+++ b/interfaces/default/html/services.html
@@ -24,7 +24,7 @@ webdir = htpc.WEBDIR
         <ul class="nav nav-tabs">
             <li><a href="#serv" data-toggle="tab">Services</a></li>
             <li><a href="#watched" data-toggle="tab" onclick="get_watchedshows();">Watched Episodes</a></li>
-            <li><a href="#iotop" data-toggle="tab" onclick="get_iotop();">Disk Usage</a></li>
+            <li><a href="#iotop" data-toggle="tab">Disk Usage</a></li>
         </ul>
 
         <div class="tab-content">
