--- a/interfaces/default/html/services.html
+++ b/interfaces/default/html/services.html
@@ -23,7 +23,7 @@ webdir = htpc.WEBDIR
 
         <ul class="nav nav-tabs">
             <li><a href="#serv" data-toggle="tab">Services</a></li>
-            <li><a href="#watched" data-toggle="tab" onclick="get_watchedshows();">Watched Episodes</a></li>
+            <li><a href="#watched" data-toggle="tab">Watched Episodes</a></li>
             <li><a href="#iotop" data-toggle="tab">Disk Usage</a></li>
         </ul>
 
