--- a/interfaces/default/html/stats.html
+++ b/interfaces/default/html/stats.html
@@ -1,65 +1,66 @@
 <%inherit file="base.html"/>
 <% settings = self.attr.settings %>
 <div class="container">
-  <div class="content">
-    <h1 class="page-header page-title">
-      <span>${settings.get('stats_name', 'Stats')}</span>
-      <small>
-        <i class="icon-arrow-down"></i><span id="stat-recv"></span>
-        <i class="icon-arrow-up"></i><span id="stat-sent"></span>
-      </small>
-    </h1>
+    <div class="content">
+        <h1 class="page-header page-title">
+            <span>${settings.get('stats_name', 'Stats')}</span>
+            <small>
+                <i class="icon-arrow-down"></i><span id="stat-recv"></span>
+                <i class="icon-arrow-up"></i><span id="stat-sent"></span>
+            </small>
+        </h1>
 
-    % if not importPsutil:
-    <div class="row-fluid">
-      <div class="alert alert-error">
-        <h4>Psutil is was not found on your system</h4>
-        <p>Stats can only be accessed if you install psutil on your system. See <a href="http://psutil.googlecode.com/hg/INSTALL">Psutil website</a>.
-      </div>
-    </div>
+        % if not importPsutil:
+        <div class="row-fluid">
+            <div class="alert alert-error">
+                <h4>Psutil is was not found on your system</h4>
+                <p>Stats can only be accessed if you install psutil on your system. See <a href="http://psutil.googlecode.com/hg/INSTALL">Psutil website</a>.
+            </div>
+        </div>
 
-    % else:
-    <div class="row-fluid">
-      <div class="span4 text-left" id="system_user"></div>
-      <div class="span4 text-center" id="system_info"></div>
-      <div class="span4 text-right" id="uptime"></div>
-    </div>
-    <div id="ss" class="row-fluid">
-      <div class="span3 cpu"></div>
-      <div class="span3 virmem text-center"></div>
-      <div class="span3 swpmem text-center"></div>
-      <div class="span3 nw text-center"></div>
-    </div>
-   
-    <ul class="nav nav-tabs">
-    <li><a href="#diskt" data-toggle="tab">Disk</a></li>
-    <li><a href="#proc">Process</a></li>
-    </ul>
-    
-    <div class="tab-content">
-        <div id="diskt" class="tab-pane active">
-            <table class="table disktable table-striped table-hover">
-                <thead>
+        % else:
+        <div class="row-fluid">
+            <div class="span4 text-left" id="system_user"></div>
+            <div class="span4 text-center" id="system_info"></div>
+            <div class="span4 text-right" id="uptime"></div>
+        </div>
+        <div id="ss" class="row-fluid">
+            <div class="span3 cpu"></div>
+            <div class="span3 virmem text-center"></div>
+            <div class="span3 swpmem text-center"></div>
+            <div class="span3 nw text-center"></div>
+        </div>
+
+        <ul class="nav nav-tabs">
+            <li id="diskl" class="active"><a href="#diskt" data-toggle="tab">Disk</a></li>
+            <li id="procl"><a href="#proc" data-toggle="tab">Process</a></li>
+        </ul>
+
+        <div class="tab-content">
+            <div id="diskt" class="tab-pane active">
+                <table class="table disktable table-striped table-hover">
+                    <thead>
                     <tr>
                         <th>Mount Point</th>
-                        <th class="hidden-phone">Location</th>
-                        <th class="hidden-phone">File System</th>
+                        <th class="">Location</th>
+                        <th class="">File System</th>
                         <th class="">Free</th>
                         <th class="">Used</th>
                         <th class="">Total</th>
                         <th id="pbar" class="span3">Bar</th>
                         <th class="">%</th>
                     </tr>
-                </thead>
-                <tbody id="disklist"></tbody>
-            </table>
-            <span id="error_message"><i class="icon-spinner icon-spin spinner"></i></span>
-        </div>
-        <div id="proc" class="tab-pane">
-            <table class="table disktable table-striped table-hover">
-                <thead>
+                    </thead>
+                    <tbody id="disklist"></tbody>
+                </table>
+                <span id="error_message"><i class="icon-spinner icon-spin spinner"></i></span>
+            </div>
+            <div id="proc" class="tab-pane">
+                <table class="table disktable table-striped table-hover">
+                    <thead>
                     <tr>
                         <th>Name</th>
+                        <th>Pid</th>
                         <th>Status</th>
                         <th>User</th>
                         <th>Memory %</th>
@@ -67,22 +68,32 @@
                         <th>Time</th>
                         <!--<th>Files</th>-->
                         <th>CPU %</th>
+                        <th>&nbsp;</th>
                     </tr>
-                </thead>
-                <tbody id="proclist"></tbody>
-            </table>
-            <span id="error_message"><i class="icon-spinner icon-spin spinner"></i></span>
+                    </thead>
+                    <tbody id="proclist"></tbody>
+                </table>
+                % if cmdline:
+                <div id="statscmd" class="span4">
+                    <div class="input-append">
+                        <input id="cmdinput" class="span4" type="text" placeholder="mkdir, dir1"></input>
+                        <button id="sendcmd" data-cmd="popen" class="btn" type="button">Go!</button>
+                    </div>
+                    <div class="alert helper-block">WARNING! What is written here is passed to the shell! Dont come crying if you delete your hardrive</div>
+                </div>
+                % endif
+                <span id="error_message"><i class="icon-spinner icon-spin spinner"></i></span>
+            </div>
         </div>
+        % endif
+
     </div>
-    % endif
-   
-  </div>
 </div>
 
 <script type="text/javascript">
-  % if importPsutil:
+    % if importPsutil:
     importPsutil = true;
-  % else :
+    % else :
     importPsutil = false;
-  % endif
+    % endif
 </script>
