correct div id ="watched"

--- a/interfaces/default/html/services.html
+++ b/interfaces/default/html/services.html
@@ -55,7 +55,7 @@ webdir = htpc.WEBDIR
                     <tbody>
                     <tr>
                         <td>
-                            <div id="watchedshows"></div>
+                            <div id="watched"></div>
                         </td>
                     </tr>
                     </tbody>
