changed div ids

--- a/interfaces/default/html/services.html
+++ b/interfaces/default/html/services.html
@@ -55,7 +55,7 @@ webdir = htpc.WEBDIR
                     <tbody>
                     <tr>
                         <td>
-                            <div id="watched"></div>
+                            <div id="watcheddata"></div>
                         </td>
                     </tr>
                     </tbody>
@@ -71,7 +71,7 @@ webdir = htpc.WEBDIR
                     <tbody>
                     <tr>
                         <td>
-                            <div id="iotop"></div>
+                            <div id="iotopdata"></div>
                         </td>
                     </tr>
                     </tbody>
