fixed tab id's to get js .click to work

--- a/interfaces/default/html/services.html
+++ b/interfaces/default/html/services.html
@@ -22,9 +22,9 @@ webdir = htpc.WEBDIR
         </h1>
 
         <ul class="nav nav-tabs">
-            <li><a href="#serv" data-toggle="tab">Services</a></li>
-            <li><a href="#watched" data-toggle="tab">Watched Episodes</a></li>
-            <li><a href="#iotop" data-toggle="tab">Disk Usage</a></li>
+            <li id="servl"><a href="#serv" data-toggle="tab">Services</a></li>
+            <li id="watchedl"><a href="#watched" data-toggle="tab">Watched Episodes</a></li>
+            <li id="iotopl"><a href="#iotop" data-toggle="tab">Disk Usage</a></li>
         </ul>
 
         <div class="tab-content">
