--- a/interfaces/default/html/services.html
+++ b/interfaces/default/html/services.html
@@ -60,6 +60,7 @@ webdir = htpc.WEBDIR
                     </tr>
                     </tbody>
                 </table>
+                <span id="error_message"><i class="icon-spinner icon-spin spinner"></i></span>
             </div>
             <div id="iotop" class="tab-pane">
                 <table class="table table-striped table-hover">
@@ -76,6 +77,7 @@ webdir = htpc.WEBDIR
                     </tr>
                     </tbody>
                 </table>
+                <span id="error_message"><i class="icon-spinner icon-spin spinner"></i></span>
             </div>
         </div>
     </div>
